# libi-sal-ishi

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/memory-bank/: api-reference.md  architecture-decisions.md  coding-patterns.md  data-models.md  file-structure.md  implementation-progress.md  project-overview.md
docs/: architecture.md  demo-script.md  sal-ishi-mvp-executable.md  sal-ishi-reverse-engineering.md  system-analysis.md
frontend/: package-lock.json  package.json
frontend/case-manager-dashboard/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/case-manager-dashboard/src/: App.tsx  index.css  main.tsx
frontend/case-manager-dashboard/src/components/: AppLayout.tsx  AppSidebar.tsx  FeedbackModal.tsx  Layout.tsx
frontend/case-manager-dashboard/src/contexts/: AppContext.tsx
frontend/case-manager-dashboard/src/data/: clients.ts  constants.ts  mock.ts  (+3 more)
frontend/landing/: index.html
frontend/shared-ui/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/shared-ui/src/: index.ts
frontend/vendor-portal/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/vendor-portal/src/: App.tsx  index.css  main.tsx
frontend/web-client/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/web-client/src/: App.tsx  index.css
infrastructure/docker/: Dockerfile.ai-agent  Dockerfile.integration  Dockerfile.marketplace  docker-compose.yml  init-db.sql
scripts/: run_demo.py  seed_data.py  setup.bat  setup.sh
(+60 files in other folders)
